--- a/perfume.html
+++ b/perfume.html
@@ -11,11 +11,10 @@
         <div><img src="imagens/perfume.jpg" alt=""></div>
         <div class="texto">
             <h2>P E R F U M E</h2>
-            <h1>Gabrielle Essence Eau De Parfum</h1>
-            <p>A floral, solar and voluptuous interpretation composed by Olivier Polge, Perfumer-Creator for the House of CHANEL.</p>
-            <h3>149.99</h3>
-            <h4><del>169.99</del></h4>
-            <a href="" class="btn"><box-icon name='cart-add'></box-icon>Add Cart</a>
+            <h1>Gabrielle <br> Essence Eau <br> De Parfum</h1>
+            <p>Uma interpretação floral,<br> solar e voluptuosa composta por Olivier Polge,<br>Perfumista-Criador da Casa CHANEL.</p>
+            <h3>149.99R$<del>169.99R$</del></h3>
+            <a href="" class="btn"><box-icon name='cart-add'></box-icon>Adicionar ao carrinho</a>
         </div>
         
     </section>
